--- a/hlfviewer/plug/hv_lang.templ
+++ b/hlfviewer/plug/hv_lang.templ
@@ -58,7 +58,7 @@ MProcessEditorInput
 
 MCheckMaskFile
 "&Check by file mask:"
-"Проверять по ма&ске файлов:"
+"Проверять по &маске файлов:"
 "Правяраць па ма&сцы файлаў:"
 "Seleziona Tramite &Filtro:"
 "&Sprawdź wg maski plików:"
