--- a/hlfviewer/src/hv_lang.templ
+++ b/hlfviewer/src/hv_lang.templ
@@ -76,7 +76,7 @@ MStyle
 "Mostrar archivo de ayuda abierto en editor:"
 "Показ файла допомоги, що редагується:"
 
-MStr1
+MStyle1
 "Show &last saved file"
 "Показывать &последний сохранённый файл"
 "Адлюстраваць а&пошні файл, які захоўваецца"
@@ -86,7 +86,7 @@ MStr1
 "Mostrar ú&ltimo archivo guardado"
 "Показувати &останній збережений файл"
 
-MStr2
+MStyle2
 "Show &modified file"
 "Показывать &изменённый файл"
 "Адлюстраваць файл, як&і мяняецца"
@@ -96,7 +96,7 @@ MStr2
 "Mostrar archivo &modificado"
 "Показувати &змінений файл"
 
-MStr3
+MStyle3
 "&Save and show modified file"
 "&Сохранять и показывать изменённый файл"
 "Захаваць і адлю&страваць файл, які мяняецца"
